# python-project-83

./: .env  .env_example  .gitignore  Makefile  README.md  database.sql  pyproject.toml  url_repository.py
.github/workflows/: my_workflow.yml
page_analyzer/: app.py  parser.py  url_repository.py  url_validator.py
page_analyzer/templates/: index.html  show.html  urls.html
