[project]
name = "hexlet-code"
version = "0.1.0"
description = "differences generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coverage>=7.8.0",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "pytest-cov>=6.1.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]
